12630
There is no `-Xprint:scanner`. `-Ydebug` shows:
```
scala> 'utf-8'
<console>:1: error: unclosed character literal
'utf-8'
      ^
<console>:1: error: [ suppressed ] ';' expected but something found.
'utf-8'
      ^
```

but could actually show the scansion for the line.
